tests/golden/type_errors/nullable_enum_pattern_non_exhaustive_nil.cd
enum Option { Some(number), None }
let value: Option? = nil;
print match value {
  Option.Some(_) => "some",
  Option.None => "none",
};
